# franc-interview-ai-cieranholmes

./: README.md
P1_system_design/: README.MD
P2_debugging_trouble_shooting/: README.md  pyproject.toml
P2_debugging_trouble_shooting/buggy_calculator/: __main__.py  calculator.py
P2_debugging_trouble_shooting/tests/: test_calculator.py
P3_code_review/: README.md  task_tracker.py  tasks.json
P4_integration/: README.md  requirements.txt
P4_integration/bookstore_api/: app.py  books.json
P4_integration/bookstore_client/: client.py  test_client.py
P5_pair_programing/: README.md
