[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buggy_calculator"
version = "0.1.0"
authors = [
    {name = "Example Author", email = "author@example.com"},
]
description = "A simple calculator with a bug to debug"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pytest>=7.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"] 